Ajout de la partie STEPS dans le CSS

--- a/styles.css
+++ b/styles.css
@@ -151,3 +151,49 @@ header nav ul li a
 {
     background: #02B8DD;
 }
+
+/* STEPS */
+
+#steps ul
+{
+    margin: 80px 0;
+    display: flex;
+    justify-content: center;
+}
+
+#steps ul li
+{
+    width: 300px;
+    float: left;
+    padding-top: 140px;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    
+}
+
+#steps h4
+{
+    text-transform: uppercase;
+    margin-bottom: 26px;
+}
+
+#steps p
+{
+    margin-bottom: 20px;
+}
+
+#steps_1
+{
+    background: url('images/pen.png') no-repeat top center;
+}
+
+#steps_2
+{
+    background: url('images/pile.png') no-repeat top center;
+}
+
+#steps_3
+{
+    background: url('images/fusee.png') no-repeat top center;
+}
