--- a/styles.css
+++ b/styles.css
@@ -278,3 +278,80 @@ article h4
     color: #fff;
     background-color: #02B8DD;    
 }
+
+/* CONTACT */
+
+#contact
+{
+    padding: 60px;
+    text-align: center;
+}
+
+#contact h3
+{
+    width: 480px;
+    text-transform: uppercase;
+    margin: 0 auto 20px auto;
+    border-bottom: 1px solid #02B8DD;
+    padding-bottom: 20px;
+}
+
+form
+{
+    margin: 60px 0 20px 0;
+}
+
+label
+{
+    font-weight: bold;
+    font-size: 20px;
+    margin-right: 10px;
+    color: #777;
+}
+
+input[type="text"]
+{
+    padding: 10px;
+    font-size: 20px;
+    margin-right: 20px;
+    border: 2px solid #ddd;
+    border-radius: 3px;
+}
+
+.button_3
+{
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 11px;
+    background-color: #ff7a00;
+    border-radius: 3px;
+}
+
+.button_3:hover
+{
+    background-color: #444;
+}
+
+/* FOOTER */
+
+footer
+{
+    height: 260px;
+    background-color: #444;
+}
+
+footer h1
+{
+    color: #fff;
+    text-align: left;
+    padding-top: 80px;
+}
+
+.copyright
+{
+    text-align: center;
+    font-weight: bold;
+    padding-top: 30px;
+    color: #777;
+}
