--- a/styles.css
+++ b/styles.css
@@ -83,11 +83,15 @@ section
     padding: auto 150px;
 }
 
-/* HERDER */
+/* HEADER */
 
 header
 {
     height: 120px;
+    width: 100%;
+    background-color: #ffffff;
+    position: fixed;
+    
 }
 
 header h1
@@ -95,12 +99,15 @@ header h1
     float: left;
     margin-top: 32px;
     margin-left: 50px;
+    position: fixed;
+    
 }
 
 header nav
 {
     float: right;
     margin-top: 50px;
+    
 }
 
 header nav ul li
